fix: header/footer banner overflow
If banner content is too long to fit within the banner it will overflow on top of the element below it.  This is due to the use of explicit heights.  These are a holdover from the old site layout that relied on fixed positions and margins.  They are no longer needed since #228.
Removing them will allo the banner to grow to contain the content.

--- a/src/app/core/site-container/site-container.component.scss
+++ b/src/app/core/site-container/site-container.component.scss
@@ -23,19 +23,16 @@ $skip-link-z-index: 10002;
 .copyright-banner {
 	background-color: $copyright-banner-bg;
 	color: $copyright-banner-color;
-	height: $copyright-banner-height;
 }
 
 .footer-banner {
 	background-color: $footer-banner-bg;
 	color: $footer-banner-color;
-	height: $footer-banner-height;
 }
 
 .header-banner {
 	background-color: $header-banner-bg;
 	color: $header-banner-color;
-	height: $header-banner-height;
 }
 
 .site-content {
